--- a/views/gallery.handlebars
+++ b/views/gallery.handlebars
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-12 col-lg-8">
                 <h1>Photo Gallery</h1>
-                <p>See below for an extensive catalogue of photos </br>relevant to projects we've esuccessfully completed!</p>
+                <p>See below for an extensive catalogue of photos </br>relevant to projects we've successfully completed!</p>
             </div>
         </div>
     </div>
@@ -27,7 +27,7 @@
             <div class="col-12 col-lg-3">
                 <a href="#landscapeInstall">
                     <div class="text-container landsc-install">
-                        <h3>Landscape Installation</h3>
+                        <h3>Landscape </br>Installation</h3>
                     </div>
                 </a>
             </div>
@@ -220,7 +220,7 @@
             </div>
         </div>
         <div class="row">
-             <div class="col-12 text-center"><a class="btn" href="/services/landscape-design">Lawndscape Design</a></div>
+             <div class="col-12 text-center"><a class="btn" href="/services/landscape-design">Landscape Design</a></div>
         </div>
     </div>
 </div>
