--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,3 @@
-/* darkest green #0A1F0E */
-/* forest - #176426 */
-/* neon green #2AB746 */
-/* cantalope - #EDF7F0 */
-/* darker blue - #194862 */
-/* seastead blue - #3A9BCF */
 
 html {
     font-size: 16px;
@@ -28,7 +22,7 @@ p  {
     line-height: 1.5rem;
     color: #0A1F0F;
 }
-
+ 
 .btn {
     background: #2AB746 !important;
     color: white !important;
@@ -141,7 +135,7 @@ body .navbar .navbar-brand img {
     }
     .navbar .dropdown-menu {
         background: #EDF7F0;
-        border-color:  #0A1F0E;
+        border-color:  transparent;
     }
     .navbar-toggler {
         position: absolute;
@@ -726,7 +720,8 @@ body .navbar .navbar-brand img {
 }
 
 .inner-banner .container {
-    padding: 2rem 0;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 .inner-banner h1 {
     font-size: 45px;
