--- a/views/careers.handlebars
+++ b/views/careers.handlebars
@@ -56,7 +56,7 @@
                 <p><i>We expect all our employees have a driver's license, insurance and a relatable way to get to work every day!</i></p>
             </div>
             <div class="col-12 col-lg-8">
-                <form action="https://formsubmit.co/mmeganshaw@gmail.com" method="POST" enctype="multipart/form-data">
+                <form action="https://formsubmit.co/cdddschlunt@adelphia.net" method="POST" enctype="multipart/form-data">
                     <div class="d-none">
                         <input type="text" name="careers-form">
                     </div>
