--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -48,7 +48,7 @@
                 <p>Have a question or inquiry regarding any of the services listed on our website? This is the place to submit a message!</p>
             </div>
             <div class="col-12 col-lg-8">
-                <form action="https://formsubmit.co/mmeganshaw@gmail.com" method="POST" enctype="multipart/form-data">
+                <form action="https://formsubmit.co/cdddschlunt@adelphia.net" method="POST" enctype="multipart/form-data">
                     <div class="d-none">
                         <input type="text" name="contact-form">
                     </div>
