--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-12 col-lg-8">
                 <h1>About Us</h1>
-                <p>Trust us to get the details right on whatever type of </br>property you own or manage in NE Ohio!</p>
+                <p>Trust us to get the details right on whatever type of property you own or manage in NE Ohio!</p>
             </div>
         </div>
     </div>
