--- a/views/careers.handlebars
+++ b/views/careers.handlebars
@@ -63,35 +63,35 @@
                     <div class="row">
                         <div class="col-12 col-lg-6">
                             <label for="firstName">First Name</label>
-                            <input id="firstName" type="text" name="first-name" class="form-control" placeholder="John">
+                            <input id="firstName" type="text" name="first-name" placeholder="John">
                         </div>
                         <div class="col-12 col-lg-6">
                             <label for="lastName">Last Name</label>
-                            <input id="lastName" type="text" name="last-name" class="form-control" placeholder="Smith">
+                            <input id="lastName" type="text" name="last-name" placeholder="Smith">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
                             <label for="email">Email</label>
-                            <input id="email" type="email" class="form-control" placeholder="johnsmith21@gmail.com" name="email" >
+                            <input id="email" type="email" placeholder="johnsmith21@gmail.com" name="email" >
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
                             <label for="tel">Phone Number</label>
-                            <input id="tel" type="tel" class="form-control" placeholder="123-456-7890" name="phone" >
+                            <input id="tel" type="tel" placeholder="123-456-7890" name="phone" >
                         </div>
                     </div>
                      <div class="row">
                         <div class="col">
                             <label for="why">Why Should We Hire You?</label>
-                            <textarea rows="3" id="why" class="form-control" placeholder="I've been in the landscaping business for 8 years and I'm a hard worker." name="why" ></textarea>
+                            <textarea rows="3" id="why" placeholder="I've been in the landscaping business for 8 years and I'm a hard worker." name="why" ></textarea>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col resume">
                             <label for="resume">Resume Upload</label>
-                            <input id="resume" type="file" name="resume" style="margin-bottom: 0;"/>
+                            <input id="resume" type="file" name="resume" style="margin-bottom: 0; background-color: none; padding: 0;"/>
                             <small id="resumeHelp" class="form-text">Files must not exceed 5MB. Any file over this can be emailed to cdddschlunt@adelphia.net.</small>
                         </div>
                     </div>
