--- a/public/css/style.css
+++ b/public/css/style.css
@@ -830,14 +830,15 @@ body .navbar .navbar-brand img {
     line-height: 42px;
     color: white;
     margin-bottom: 0;
-    
+    display: block;
     font-weight:lighter;
 }
 .form input,
 .form textarea {
     background-color: #d8d8d8;
     border-radius: 26px;
-    padding: 28px;
+    padding: 15px;
+    width: 100%;
     font-size: 18px;
     font-family: 'Roboto', sans-serif;
     line-height: 21px;
