--- a/views/careers.handlebars
+++ b/views/careers.handlebars
@@ -22,13 +22,13 @@
             <div class="col-12 col-lg-3">
                 <div class="cards">
                     <h3>Established Company</h3>
-                    <p>We're been in business for over 3- years, so trust us when we say, we know a thing or two!</p>
+                    <p>We're been in business for over 30 years, so trust us when we say, we know a thing or two!</p>
                 </div>
             </div>
              <div class="col-12 col-lg-3">
                 <div class="cards">
                     <h3>Employee Focused</h3>
-                    <p>Our employees are the backbone of our company.. We do what's right by our own!</p>
+                    <p>Our employees are the backbone of our company. We do what's right by our own!</p>
                 </div>
             </div>
             <div class="col-12 col-lg-3">
@@ -53,10 +53,10 @@
                 <h2>EMPLOYMENT APPLICATION</h2>
                 <hr>
                 <p>If you're interested in starting a rewarding career, apply here!</p>
-                <p><i>We expect all our employees have a driver's license, insurance and a relatable way to get to work every day!</i></p>
+                <p><i>We expect all our employees have a driver's license, insurance and a reliable way to get to work every day!</i></p>
             </div>
             <div class="col-12 col-lg-8">
-                <form action="https://formsubmit.co/cdddschlunt@adelphia.net" method="POST" enctype="multipart/form-data">
+                <form action="https://formsubmit.co/derekschlunt1@hotmail.com" method="POST" enctype="multipart/form-data">
                     <div class="d-none">
                         <input type="text" name="careers-form">
                     </div>
