--- a/views/gallery.handlebars
+++ b/views/gallery.handlebars
@@ -86,6 +86,31 @@
                     <img src="public/images/lawn-maintenance/maint-6.png" class="img-fluid" alt="lawn maintenance">
                 </a>
             </div>
+             <div class="col-12 col-lg-4">
+                <a href="public/images/lawn-maintenance/maint-7.jpeg" data-lightbox="maintenance">
+                    <img src="public/images/lawn-maintenance/maint-7.jpeg" class="img-fluid" alt="lawn maintenance">
+                </a>
+            </div>
+             <div class="col-12 col-lg-4">
+                <a href="public/images/lawn-maintenance/maint-8.jpeg" data-lightbox="maintenance">
+                    <img src="public/images/lawn-maintenance/maint-8.jpeg" class="img-fluid" alt="lawn maintenance">
+                </a>
+            </div>
+             <div class="col-12 col-lg-4">
+                <a href="public/images/lawn-maintenance/maint-9.jpeg" data-lightbox="maintenance">
+                    <img src="public/images/lawn-maintenance/maint-9.jpeg" class="img-fluid" alt="lawn maintenance">
+                </a>
+            </div>
+             <div class="col-12 col-lg-4">
+                <a href="public/images/lawn-maintenance/maint-10.jpeg" data-lightbox="maintenance">
+                    <img src="public/images/lawn-maintenance/maint-10.jpeg" class="img-fluid" alt="lawn maintenance">
+                </a>
+            </div>
+             <div class="col-12 col-lg-4">
+                <a href="public/images/lawn-maintenance/maint-11.jpeg" data-lightbox="maintenance">
+                    <img src="public/images/lawn-maintenance/maint-11.jpeg" class="img-fluid" alt="lawn maintenance">
+                </a>
+            </div>
         </div>
         <div class="row">
              <div class="col-12 text-center"><a class="btn" href="/services/lawn-maintenance">Lawn Maintenance</a></div>
@@ -130,6 +155,41 @@
                     <img src="/public/images/install/install-6.jpeg" class="img-fluid" alt="landscape installation">
                 </a>
             </div>
+             <div class="col-12 col-lg-4">
+                <a href="/public/images/install/install-7.jpeg" data-lightbox="install">
+                    <img src="/public/images/install/install-7.jpeg" class="img-fluid" alt="landscape installation">
+                </a>
+            </div>
+             <div class="col-12 col-lg-4">
+                <a href="/public/images/install/install-8.jpeg" data-lightbox="install">
+                    <img src="/public/images/install/install-8.jpeg" class="img-fluid" alt="landscape installation">
+                </a>
+            </div>
+             <div class="col-12 col-lg-4">
+                <a href="/public/images/install/install-9.jpeg" data-lightbox="install">
+                    <img src="/public/images/install/install-9.jpeg" class="img-fluid" alt="landscape installation">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/install/install-11.jpeg" data-lightbox="install">
+                    <img src="/public/images/install/install-11.jpeg" class="img-fluid" alt="landscape installation">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/install/install-12.jpeg" data-lightbox="install">
+                    <img src="/public/images/install/install-12.jpeg" class="img-fluid" alt="landscape installation">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/install/install-13.jpeg" data-lightbox="install">
+                    <img src="/public/images/install/install-13.jpeg" class="img-fluid" alt="landscape installation">
+                </a>
+            </div>
+             <div class="col-12 col-lg-4">
+                <a href="/public/images/install/install-14.jpeg" data-lightbox="install">
+                    <img src="/public/images/install/install-14.jpeg" class="img-fluid" alt="landscape installation">
+                </a>
+            </div>
         </div>
         <div class="row">
              <div class="col-12 text-center"><a class="btn" href="/services/landscape-install">Landscape Installation</a></div>
@@ -151,7 +211,7 @@
             </div>
             <div class="col-12 col-lg-4">
                 <a href="/public/images/snow/snow-2.jpeg" data-lightbox="snow">
-                    <img src="public/images/lawn-maintenance/maint-2.png" class="img-fluid" alt="snow ice">
+                    <img src="/public/images/snow/snow-2.jpeg" class="img-fluid" alt="snow ice">
                 </a>
             </div>
             <div class="col-12 col-lg-4">
@@ -172,6 +232,31 @@
             <div class="col-12 col-lg-4">
                 <a href="/public/images/snow/snow-6.jpeg" data-lightbox="snow">
                     <img src="/public/images/snow/snow-6.jpeg" class="img-fluid" alt="snow ice">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/snow/snow-7.jpeg" data-lightbox="snow">
+                    <img src="/public/images/snow/snow-7.jpeg" class="img-fluid" alt="snow ice">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/snow/snow-8.jpeg" data-lightbox="snow">
+                    <img src="/public/images/snow/snow-8.jpeg" class="img-fluid" alt="snow ice">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/snow/snow-9.jpeg" data-lightbox="snow">
+                    <img src="/public/images/snow/snow-9.jpeg" class="img-fluid" alt="snow ice">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/snow/snow-10.jpeg" data-lightbox="snow">
+                    <img src="/public/images/snow/snow-10.jpeg" class="img-fluid" alt="snow ice">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/snow/snow-11.png" data-lightbox="snow">
+                    <img src="/public/images/snow/snow-11.png" class="img-fluid" alt="snow ice">
                 </a>
             </div>
         </div>
@@ -216,6 +301,26 @@
             <div class="col-12 col-lg-4">
                 <a href="/public/images/design/design-6.png" data-lightbox="design">
                     <img src="/public/images/design/design-6.png" class="img-fluid" alt="landscape design">
+                </a>
+            </div>
+             <div class="col-12 col-lg-4">
+                <a href="/public/images/design/design-7.jpeg" data-lightbox="design">
+                    <img src="/public/images/design/design-7.jpeg" class="img-fluid" alt="landscape design">
+                </a>
+            </div>
+             <div class="col-12 col-lg-4">
+                <a href="/public/images/design/design-8.jpeg" data-lightbox="design">
+                    <img src="/public/images/design/design-8.jpeg" class="img-fluid" alt="landscape design">
+                </a>
+            </div>
+             <div class="col-12 col-lg-4">
+                <a href="/public/images/design/design-9.jpeg" data-lightbox="design">
+                    <img src="/public/images/design/design-9.jpeg" class="img-fluid" alt="landscape design">
+                </a>
+            </div>
+             <div class="col-12 col-lg-4">
+                <a href="/public/images/design/design-10.jpeg" data-lightbox="design">
+                    <img src="/public/images/design/design-10.jpeg" class="img-fluid" alt="landscape design">
                 </a>
             </div>
         </div>
