--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="carousel-item" >
-            <div class="image w-100 h-100" style="background-image: url('/public/images/slide-2.jpeg')"></div>
+            <div class="image w-100 h-100" style="background-image: url('/public/images/slide-2.jpg')"></div>
             <div class="overlay w-100 h-100"></div>
             <div class="container">
                 <div class="row">
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <div class="image w-100 h-100" style="background-image: url('/public/images/slide-3.png')"></div>
+            <div class="image w-100 h-100" style="background-image: url('/public/images/sllide-3.JPEG')"></div>
             <div class="overlay w-100 h-100"></div>
             <div class="container">
                 <div class="row">
@@ -182,7 +182,7 @@
                 <div class="card">
                     <img class="card-img-top" src="/public/images/install/install-1.png" alt="landscape installation">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Landscape Installtion</h5>
+                        <h5 class="card-title">Landscape Installation</h5>
                         <p class="card-text">Let us design your dream outdoor living space. After our consultation we will make imagination become reality!</p>
                         <a href="/services/landscape-install" class="btn">Read More</a>
                     </div>
