--- a/views/landscape-design.handlebars
+++ b/views/landscape-design.handlebars
@@ -74,7 +74,7 @@
                 <div class="row">
                     <div class="col-12">
                         <a href="/gallery"><h3>View More Photos In The Gallery!</h3></a>
-                        <p>In the gallery you will find many photos of our properties being maintained for the past 30 years. As you will notice our quality control is always superb and nothing is neglected. We take pride in our work and love to share the final product.</p>
+                        <p>In the gallery you will find many photos of our designs. Everything from plant layouts to patios with kitchens. As you will notice our designs are high quality and take many hours of detail oriented arrangement to maximize the space provided!</p>
                     </div>
                 </div>
             </div>
