--- a/views/lawn-maintenance.handlebars
+++ b/views/lawn-maintenance.handlebars
@@ -40,7 +40,7 @@
                         <img src="/public/images/lawn-maintenance/maint-2.png" alt="lawn maintenance">
                         <h3>Lawn Maintenance</h3>
                         <p>Business As Usual brings the curb appeal that you home or business desires. We offer an array of services such as but not limited to,
-                        Weekly lawn care, spring and fall clean ups, mulching, bed edging, bed maintenance, and shrub and tree trimming
+                        Weekly lawn care, spring and fall clean ups, mulching, bed edging, bed maintenance, and shrub and tree trimming.
                         </p>
                         <p>Weekly lawn mowing includes mowing with high end commercial lawn mowers, trimming around all obstacles, edging all driveways and walkways and finally blowing off of all hard surfaces. All of our mowing crew members are very well trained and care about your property. Our staff is easily approachable and knowledgeable if you ever have any questions while they are on site. Crew members will arrive in our branded trucks with uniforms and be on time week to week.</p>
                         <p>Spring and fall clean ups include removal of all leaves, sticks and any other debris. This can also include optional clean up of perennials and annuals. We can haul away any amount of material that is needed or if the city picks up your leaves we can leave them on the curb!</p>
