--- a/views/snow-ice.handlebars
+++ b/views/snow-ice.handlebars
@@ -39,7 +39,7 @@
                     <div class="col-12">
                         <img src="/public/images/snow/snow-2.jpeg" alt="snow and ice management">
                         <h3>Snow Removal and Ice Control</h3>
-                        <p>Snow removal is available 24/7, we are on standby all winter long for any storms and lake effect snow.. Using our fleet of trucks, machines, and staff we will keep your property accessible even during the worst storms.  </p>
+                        <p>Snow removal is available 24/7, we are on standby all winter long for any storms and lake effect snow. Using our fleet of trucks, machines, and staff we will keep your property accessible even during the worst storms.  </p>
                         <p>Commercial lots such as, Industrial, Healthcare, HOA’s,etc come with a zero to two inch tolerance clause within  contracts. Ice control is also available 24/7. With our own personal company salt dome we can keep your customers, staff and cars from slipping and sliding. </p>
                         <p> Residential driveways and lots come with a one to two inch tolerance clause within contracts.   </p>
                     </div>
