All changes complete

--- a/views/lawn-maintenance.handlebars
+++ b/views/lawn-maintenance.handlebars
@@ -39,12 +39,12 @@
                     <div class="col-12">
                         <img src="/public/images/lawn-maintenance/maint-2.png" alt="lawn maintenance">
                         <h3>Lawn Maintenance</h3>
-                        <p>Business As Usual brings the curb appeal that you home or business desires. We offer an array of services such as but not limited to,
+                        <p>Business As Usual brings the curb appeal that your home or business desires. We offer an array of services such as but not limited to,
                         Weekly lawn care, spring and fall clean ups, mulching, bed edging, bed maintenance, and shrub and tree trimming.
                         </p>
                         <p>Weekly lawn mowing includes mowing with high end commercial lawn mowers, trimming around all obstacles, edging all driveways and walkways and finally blowing off of all hard surfaces. All of our mowing crew members are very well trained and care about your property. Our staff is easily approachable and knowledgeable if you ever have any questions while they are on site. Crew members will arrive in our branded trucks with uniforms and be on time week to week.</p>
                         <p>Spring and fall clean ups include removal of all leaves, sticks and any other debris. This can also include optional clean up of perennials and annuals. We can haul away any amount of material that is needed or if the city picks up your leaves we can leave them on the curb!</p>
-                        <p>Mulching is the easiest way to give your home a fresh start! We use triple shredded black or brown mulch that is the highest quality in the market. Your color will last through the entire year and help keep the weeds under control. We can offer the best prices in the area because of our bulk material bins at our shop located close by. We also offer mulch delivery if you would like to do it yourself. </p>
+                        <p>Mulching is the easiest way to give your property a fresh start! We use triple shredded black or brown mulch that is the highest quality in the market. Your color will last through the entire year and help keep the weeds under control. We can offer the best prices in the area because of our bulk material bins at our shop located close by. We also offer mulch delivery if you would like to do it yourself. </p>
                         <p>Bed Edging will be done to redefine your bed lines. We offer machine trenches and hand dug edges.</p>
                         <p>Bed Maintenance will be done to remove any weeds or unwanted debris in your beds.</p>
                         <p>Shrub and tree trimming will be done to keep the shape of your plants. This is critical to longevity and optimal plant growth in the future. Let our experienced staff keep your plants looking their best and staying healthy!</p>
