--- a/views/careers.handlebars
+++ b/views/careers.handlebars
@@ -57,6 +57,8 @@
             </div>
             <div class="col-12 col-lg-8">
                 <form action="https://formsubmit.co/baulandscaping@gmail.com" method="POST" enctype="multipart/form-data">
+                    <!--optional starts-->  <input type="hidden" name="_url" value="https://baulandscaping@gmail.com/thepage.html"> <!--optional ends-->
+
                     <div class="d-none">
                         <input type="text" name="careers-form">
                     </div>
