--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -48,8 +48,8 @@
                 <p>Have a question or inquiry regarding any of the services listed on our website? This is the place to submit a message!</p>
             </div>
             <div class="col-12 col-lg-8">
-                <form action="https://formsubmit.co/baulandscaping@gmail.com" method="POST" enctype="multipart/form-data">
-                    <!--optional starts-->  <input type="hidden" name="_url" value="https://baulandscaping@gmail.com/thepage.html"> <!--optional ends-->
+                <form action="https://formsubmit.co/2747d5d98effca511fd735705d62fa1a" method="POST" enctype="multipart/form-data">
+                    <!--optional starts-->  <input type="hidden" name="_url" value="https://2747d5d98effca511fd735705d62fa1a/thepage.html"> <!--optional ends-->
                     <div class="d-none">
                         <input type="text" name="contact-form">
                     </div>
