--- a/views/gallery.handlebars
+++ b/views/gallery.handlebars
@@ -190,6 +190,11 @@
                     <img src="/public/images/install/install-14.jpeg" class="img-fluid" alt="landscape installation">
                 </a>
             </div>
+            <div class="col-12 col-lg-4">
+                <a href="/public/images/design/design-10.jpeg" data-lightbox="install">
+                    <img src="/public/images/design/design-10.jpeg" class="img-fluid" alt="landscape design">
+                </a>
+            </div>
         </div>
         <div class="row">
              <div class="col-12 text-center"><a class="btn" href="/services/landscape-install">Landscape Installation</a></div>
@@ -316,11 +321,6 @@
              <div class="col-12 col-lg-4">
                 <a href="/public/images/design/design-9.jpeg" data-lightbox="design">
                     <img src="/public/images/design/design-9.jpeg" class="img-fluid" alt="landscape design">
-                </a>
-            </div>
-             <div class="col-12 col-lg-4">
-                <a href="/public/images/design/design-10.jpeg" data-lightbox="design">
-                    <img src="/public/images/design/design-10.jpeg" class="img-fluid" alt="landscape design">
                 </a>
             </div>
         </div>
