--- a/views/landscape-installation.handlebars
+++ b/views/landscape-installation.handlebars
@@ -76,7 +76,7 @@
                 <div class="row">
                     <div class="col-12">
                         <a href="/gallery"><h3>View More Photos In The Gallery!</h3></a>
-                        <p>In the gallery you will find many photos of our properties being maintained for the past 30 years. As you will notice our quality control is always superb and nothing is neglected. We take pride in our work and love to share the final product.</p>
+                        <p>In the gallery you will find many photos of our projects being installed over the past 30 years. As you will notice our quality control is always superb and nothing is neglected. We take pride in our wok and love to share the final product.</p>
                     </div>
                 </div>
             </div>
